--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .wrapper {
-  height: 30rem;
+  /* height: 30rem; */
   transition: height 0.2s ease;
 }
 
@@ -148,6 +148,7 @@ h1 {
   padding: 1.5rem;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 1rem;
 }
 
@@ -287,6 +288,19 @@ emoji-picker {
   background-color: #1b74e4;
   color: #ffffff;
   font-size: 1rem;
+}
+.del-btn{
+  outline: none;
+    border: none;
+    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 0.75rem 0;
+    margin-top: 1rem;
+    font-family: 'Inter', sans-serif;
+    background-color: #fb0000;
+    color: #ffffff;
+    font-size: 1rem;
 }
 
 .post-btn:hover {
